<resources>
    <string name="app_name">Calculator</string>
    <string name="default_result">0</string>
    <string name="add_button">+</string>
    <string name="sub_button">-</string>
    <string name="mul_button">*</string>
    <string name="div_button">/</string>
    <string name="equals_button">=</string>
    <string name="clear_button">Clear</string>
    <string name="dot_button">.</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
</resources>
